style.css
/*
Theme Name: Orange Room Software HTML5 Parent Theme
Theme URI: https://github.com/OrangeRoomSoftware/ors-html5-starting-point
Description: Based on the <a href="http://html5boilerplate.com">HTML5 Boilerplate</a> and Bruce Lawson's <a href="http://html5doctor.com/designing-a-blog-with-html5/">Designing a Blog with HTML5</a>. The sole purpose of this theme is to save developers the time it takes to apply the HTML5 Boilerplate to WordPress. See the README for instructions. The "HTML5 Boilerplate" name is used with permission from Paul Irish.
Version: 1.0
Author: Phill Kenoyer
Author URI: http://www.orangeroomsoftware.com/
Tags: white, two-columns
License: GNU General Public License v2.0
License URI: http://www.gnu.org/licenses/gpl-2.0.html
*/

/* Reset */
html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{margin:0;padding:0;border:0;outline:0;font-size:100%;background:transparent;text-decoration:none;}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}:focus{outline:0}ins{text-decoration:none}del{text-decoration:line-through}table{border-collapse:collapse;border-spacing:0}
/* 960.gs Core */
.container_12,.container_16{margin-left:auto;margin-right:auto;width:960px}.grid_1,.grid_2,.grid_3,.grid_4,.grid_5,.grid_6,.grid_7,.grid_8,.grid_9,.grid_10,.grid_11,.grid_12,.grid_13,.grid_14,.grid_15,.grid_16{display:inline;float:left;margin-left:10px;margin-right:10px}.push_1,.pull_1,.push_2,.pull_2,.push_3,.pull_3,.push_4,.pull_4,.push_5,.pull_5,.push_6,.pull_6,.push_7,.pull_7,.push_8,.pull_8,.push_9,.pull_9,.push_10,.pull_10,.push_11,.pull_11,.push_12,.pull_12,.push_13,.pull_13,.push_14,.pull_14,.push_15,.pull_15{position:relative}.container_12 .grid_3,.container_16 .grid_4{width:220px}.container_12 .grid_6,.container_16 .grid_8{width:460px}.container_12 .grid_9,.container_16 .grid_12{width:700px}.container_12 .grid_12,.container_16 .grid_16{width:940px}.alpha{margin-left:0}.omega{margin-right:0}.container_12 .grid_1{width:60px}.container_12 .grid_2{width:140px}.container_12 .grid_4{width:300px}.container_12 .grid_5{width:380px}.container_12 .grid_7{width:540px}.container_12 .grid_8{width:620px}.container_12 .grid_10{width:780px}.container_12 .grid_11{width:860px}.container_16 .grid_1{width:40px}.container_16 .grid_2{width:100px}.container_16 .grid_3{width:160px}.container_16 .grid_5{width:280px}.container_16 .grid_6{width:340px}.container_16 .grid_7{width:400px}.container_16 .grid_9{width:520px}.container_16 .grid_10{width:580px}.container_16 .grid_11{width:640px}.container_16 .grid_13{width:760px}.container_16 .grid_14{width:820px}.container_16 .grid_15{width:880px}.container_12 .prefix_3,.container_16 .prefix_4{padding-left:240px}.container_12 .prefix_6,.container_16 .prefix_8{padding-left:480px}.container_12 .prefix_9,.container_16 .prefix_12{padding-left:720px}.container_12 .prefix_1{padding-left:80px}.container_12 .prefix_2{padding-left:160px}.container_12 .prefix_4{padding-left:320px}.container_12 .prefix_5{padding-left:400px}.container_12 .prefix_7{padding-left:560px}.container_12 .prefix_8{padding-left:640px}.container_12 .prefix_10{padding-left:800px}.container_12 .prefix_11{padding-left:880px}.container_16 .prefix_1{padding-left:60px}.container_16 .prefix_2{padding-left:120px}.container_16 .prefix_3{padding-left:180px}.container_16 .prefix_5{padding-left:300px}.container_16 .prefix_6{padding-left:360px}.container_16 .prefix_7{padding-left:420px}.container_16 .prefix_9{padding-left:540px}.container_16 .prefix_10{padding-left:600px}.container_16 .prefix_11{padding-left:660px}.container_16 .prefix_13{padding-left:780px}.container_16 .prefix_14{padding-left:840px}.container_16 .prefix_15{padding-left:900px}.container_12 .suffix_3,.container_16 .suffix_4{padding-right:240px}.container_12 .suffix_6,.container_16 .suffix_8{padding-right:480px}.container_12 .suffix_9,.container_16 .suffix_12{padding-right:720px}.container_12 .suffix_1{padding-right:80px}.container_12 .suffix_2{padding-right:160px}.container_12 .suffix_4{padding-right:320px}.container_12 .suffix_5{padding-right:400px}.container_12 .suffix_7{padding-right:560px}.container_12 .suffix_8{padding-right:640px}.container_12 .suffix_10{padding-right:800px}.container_12 .suffix_11{padding-right:880px}.container_16 .suffix_1{padding-right:60px}.container_16 .suffix_2{padding-right:120px}.container_16 .suffix_3{padding-right:180px}.container_16 .suffix_5{padding-right:300px}.container_16 .suffix_6{padding-right:360px}.container_16 .suffix_7{padding-right:420px}.container_16 .suffix_9{padding-right:540px}.container_16 .suffix_10{padding-right:600px}.container_16 .suffix_11{padding-right:660px}.container_16 .suffix_13{padding-right:780px}.container_16 .suffix_14{padding-right:840px}.container_16 .suffix_15{padding-right:900px}.container_12 .push_3,.container_16 .push_4{left:240px}.container_12 .push_6,.container_16 .push_8{left:480px}.container_12 .push_9,.container_16 .push_12{left:720px}.container_12 .push_1{left:80px}.container_12 .push_2{left:160px}.container_12 .push_4{left:320px}.container_12 .push_5{left:400px}.container_12 .push_7{left:560px}.container_12 .push_8{left:640px}.container_12 .push_10{left:800px}.container_12 .push_11{left:880px}.container_16 .push_1{left:60px}.container_16 .push_2{left:120px}.container_16 .push_3{left:180px}.container_16 .push_5{left:300px}.container_16 .push_6{left:360px}.container_16 .push_7{left:420px}.container_16 .push_9{left:540px}.container_16 .push_10{left:600px}.container_16 .push_11{left:660px}.container_16 .push_13{left:780px}.container_16 .push_14{left:840px}.container_16 .push_15{left:900px}.container_12 .pull_3,.container_16 .pull_4{left:-240px}.container_12 .pull_6,.container_16 .pull_8{left:-480px}.container_12 .pull_9,.container_16 .pull_12{left:-720px}.container_12 .pull_1{left:-80px}.container_12 .pull_2{left:-160px}.container_12 .pull_4{left:-320px}.container_12 .pull_5{left:-400px}.container_12 .pull_7{left:-560px}.container_12 .pull_8{left:-640px}.container_12 .pull_10{left:-800px}.container_12 .pull_11{left:-880px}.container_16 .pull_1{left:-60px}.container_16 .pull_2{left:-120px}.container_16 .pull_3{left:-180px}.container_16 .pull_5{left:-300px}.container_16 .pull_6{left:-360px}.container_16 .pull_7{left:-420px}.container_16 .pull_9{left:-540px}.container_16 .pull_10{left:-600px}.container_16 .pull_11{left:-660px}.container_16 .pull_13{left:-780px}.container_16 .pull_14{left:-840px}.container_16 .pull_15{left:-900px}.clear{clear:both;display:block;overflow:hidden;visibility:hidden;width:0;height:0}.clearfix:before,.clearfix:after{content:'\0020';display:block;overflow:hidden;visibility:hidden;width:0;height:0}.clearfix:after{clear:both}.clearfix{zoom:1}/* Blueprint Text */
/* Blueprint Text */
body{width:960px;margin:0 auto;font:12px 'Helvetica Neue',Helvetica,Arial,sans-serif}a:focus{outline:1px dotted}hr{border:0 #ccc solid;border-top-width:1px;clear:both;height:0}h1{font-size:25px}h2{font-size:23px}h3{font-size:21px}h4{font-size:19px}h5{font-size:17px}h6{font-size:15px}ol{list-style:decimal}ul{list-style:disc}li{margin-left:30px}p,dl,hr,h1,h2,h3,h4,h5,h6,ol,ul,pre,table,address,fieldset{margin:0px;}
/* html5 shivs */
header,hgroup,nav,article,section,footer{display:block;overflow:hidden;}

/* Un-Reset */

/* Header */
header hgroup{text-align:center;}
header hgroup h1 a{font:bold 28pt/30pt 'Helvetica Neue';text-decoration:none;}
header hgroup h2{font:bold italic 16pt 'Helvetica Neue';letter-spacing: 3px;margin:0 0 10px 0;}

/* Top Navigation */
#top-menu-container{margin:0;width:960px;clear:both;overflow:hidden;}
#top-menu{background:#eee;color:black;width:958px;}
#top-menu,
#top-menu ul{float:left;list-style:none;margin:0;padding:0;border:1px solid #555;}
#top-menu a,
#top-menu li ul li a{display:block;color:black;text-decoration:none;padding:10px 10px;margin:0 10px;}
#top-menu li ul{margin-left:10px;}
#top-menu li ul li a{margin:0;}
#top-menu a:hover,
#sub-menu a:hover{background:#777;color:white;}
#top-menu>li{float:left;padding:0;margin:0;}
#top-menu ul{position:absolute;left:-999em;height:auto;min-width:150px;margin:0;line-height:1;}
#top-menu li li{min-width:150px;list-style:none;margin:0;padding:0;}
#top-menu li:hover ul ul,
#top-menu li:hover ul ul ul,
#top-menu li:hover ul ul ul ul,
#top-menu li.sfhover ul ul,
#top-menu li.sfhover ul ul ul,
#top-menu li.sfhover ul ul ul ul{left:-999em;}
#top-menu li:hover ul,
#top-menu li li:hover ul,
#top-menu li li li:hover ul,
#top-menu li li li li:hover ul,
#top-menu li.sfhover ul,
#top-menu li li.sfhover ul,
#top-menu li li li.sfhover ul,
#top-menu li li li li.sfhover ul{left:auto;background:#eee;}

/* Bottom Navigation */
#bottom-menu-container ul,
#bottom-menu-container ul *{margin:0;padding:0;list-style:none;}
#bottom-menu-container ul{clear:both;line-height:1.0;padding:0 10px;text-align:center;margin:25px 0 20px 0;}
#bottom-menu-container ul li{display:inline;margin:10px;}
#bottom-menu-container ul li a{text-decoration:none;}

/* Content */
#main{position:static;}
#main article{overflow:hidden;margin-bottom:15px;}
#main article:first-child{margin-top:15px;}
#main article header h2{margin:0;}
#main article header h2 a{font:bold 16pt/20pt 'Helvetica Neue';}
#main article header time{display:none;}
#main article .attachment-thumbnail{float:left;clear:left;margin-right:20px;border:solid 1px black;}
#main article h1,
#main article h2,
#main article h3{margin-bottom: 10px;}
#main article p,
#main article ul,
#main article ol{margin-bottom:8px;font:normal 12pt/18pt "Helvetica Neue",Arial,Helvetica,sans-serif;overflow:hidden;}
#main article .featured-image {margin:10px;}
#main table tr th,
#main table tr td {font-size: 12pt}
#main .gallery .gallery-item{display:inline-block;float:left;}
#main .gallery .gallery-item .gallery-icon a{text-decoration:none;border:none;}
#main .gallery .gallery-item .gallery-icon img{margin:10px;border:solid 1px black;}
#main #sidebar{overflow:hidden;padding:10px 0;}

/* Inventory */
article.inventory{border:solid 1px #ccc;border-radius:5px;}
article.inventory header h2{padding:2px 5px;border-bottom:solid 1px #ccc;background:#eee;}
article.inventory section{padding:5px!important;overflow:hidden;}

/* Footer */
footer{clear:both;}
footer section{margin:10px;}

/* WordPress Required Styles */
.aligncenter{display:block;margin-left:auto;margin-right:auto;}
.alignleft{float:left;margin-right:10px;}
.alignright{float:right;margin-left:10px;}
.wp-caption{border:1px solid #ddd;text-align:center;background-color:#f3f3f3;padding-top:4px;margin:10px;border-radius:3px;-moz-border-radius:3px;-khtml-border-radius:3px;-webkit-border-radius:3px;}
.wp-caption img{margin:0;padding:0;border:0 none;}
.wp-caption-dd{font-size:11px;line-height:17px;padding:0 4px 5px;margin:0;}

